--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -234,3 +234,19 @@
         transition: all .2s ease !important;
     }
 }
+
+/* mobile controls hack for IE because IE never dies */
+@media all and (-ms-high-contrast:none) {
+    .mobile-controls .toggle-search {
+        position: absolute;
+        right: 70px;
+        top: 14px;
+    }
+    /* IE10 */
+    *::-ms-backdrop, .mobile-controls .toggle-search {
+        position: absolute;
+        right: 70px;
+        top: 14px;
+    }
+    /* IE11 */
+}
