--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v6 -  @version v6.0.1 -  3/13/2020 
+ * CA State Template v6 -  @version v6.0.1 -  4/27/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.4.1 - /source/scss/bootstrap/ 
@@ -9490,6 +9490,94 @@ ul.et-fb-font-icon-list li:after {
   font-family: 'CaGov', 'ETModules' !important;
   content: attr(data-icon);
   speak: none;
+}
+
+.ca-gov-icon-distance:before {
+  content: "\e995";
+}
+
+.ca-gov-icon-coronavirus:before {
+  content: "\e996";
+}
+
+.ca-gov-icon-coughing:before {
+  content: "\e997";
+}
+
+.ca-gov-icon-cover:before {
+  content: "\e998";
+}
+
+.ca-gov-icon-cubes:before {
+  content: "\e999";
+}
+
+.ca-gov-icon-hand-heart:before {
+  content: "\e99a";
+}
+
+.ca-gov-icon-hand-water:before {
+  content: "\e99b";
+}
+
+.ca-gov-icon-lab-tests:before {
+  content: "\e99c";
+}
+
+.ca-gov-icon-mask:before {
+  content: "\e99d";
+}
+
+.ca-gov-icon-no-coughing:before {
+  content: "\e99e";
+}
+
+.ca-gov-icon-no-handshake:before {
+  content: "\e99f";
+}
+
+.ca-gov-icon-no-virus:before {
+  content: "\e9a0";
+}
+
+.ca-gov-icon-procurement:before {
+  content: "\e9a1";
+}
+
+.ca-gov-icon-project:before {
+  content: "\e9a2";
+}
+
+.ca-gov-icon-soap:before {
+  content: "\e9a3";
+}
+
+.ca-gov-icon-stay-home:before {
+  content: "\e9a4";
+}
+
+.ca-gov-icon-teleworking:before {
+  content: "\e9a5";
+}
+
+.ca-gov-icon-testing:before {
+  content: "\e9a6";
+}
+
+.ca-gov-icon-testing-alt:before {
+  content: "\e9a7";
+}
+
+.ca-gov-icon-virus:before {
+  content: "\e9a8";
+}
+
+.ca-gov-icon-viruses:before {
+  content: "\e9a9";
+}
+
+.ca-gov-icon-wash:before {
+  content: "\e9aa";
 }
 
 .ca-gov-icon-update:before {
@@ -23162,6 +23250,42 @@ a.label-dark:focus, a.label-dark.focus {
 
 .font-size-40 {
   font-size: 2.85714rem !important;
+}
+
+.line-height-0-8em {
+  line-height: 0.8em !important;
+}
+
+.line-height-0-9em {
+  line-height: 0.9em !important;
+}
+
+.line-height-1em {
+  line-height: 1em !important;
+}
+
+.line-height-1-1em {
+  line-height: 1.1em !important;
+}
+
+.line-height-1-2em {
+  line-height: 1.2em !important;
+}
+
+.line-height-1-3em {
+  line-height: 1.3em !important;
+}
+
+.line-height-1-4em {
+  line-height: 1.4em !important;
+}
+
+.line-height-1-5em {
+  line-height: 1.5em !important;
+}
+
+.line-height-1-6em {
+  line-height: 1.6em !important;
 }
 
 /*------------------------------------
