--- a/source/scss/cagov/globals.scss
+++ b/source/scss/cagov/globals.scss
@@ -629,6 +629,43 @@
         font-size: 2.85714rem !important;
     }
 
+.line-height-0-8em {
+    line-height: 0.8em !important;
+}
+
+
+.line-height-0-9em {
+    line-height: 0.9em !important;
+}
+
+.line-height-1em {
+    line-height: 1em !important;
+}
+
+.line-height-1-1em {
+    line-height: 1.1em !important;
+}
+
+.line-height-1-2em {
+    line-height: 1.2em !important;
+}
+
+.line-height-1-3em {
+    line-height: 1.3em !important;
+}
+
+.line-height-1-4em {
+    line-height: 1.4em !important;
+}
+
+.line-height-1-5em {
+    line-height: 1.5em !important;
+}
+
+.line-height-1-6em {
+    line-height: 1.6em !important;
+}
+
     /*------------------------------------
   Rounded borders
 ------------------------------------*/
