--- a/source/scss/colorscheme/cs-navigation.scss
+++ b/source/scss/colorscheme/cs-navigation.scss
@@ -190,3 +190,12 @@
 	
 	}
 }
+
+// Search button
+button.first-level-link > span.search-btn > span[class^="ca-gov-icon"] {
+    color: desaturate(lighten($color-p2, 43), 51);
+}
+
+.nav-item:hover button.first-level-link > span.search-btn > span[class^="ca-gov-icon"], .nav-item:focus button.first-level-link > span.search-btn > span[class^="ca-gov-icon"], .nav-item:hover button.first-level-link, .nav-item:focus button.first-level-link {
+    color: $color-p2;
+}
