--- a/source/scss/cagov/navigation.scss
+++ b/source/scss/cagov/navigation.scss
@@ -444,3 +444,28 @@
 .oldie .home-link {
     @include sr-only();
 }
+
+
+
+/* Search button desktop styles */
+@media (min-width: 768px) {
+
+    #nav-item-search button.first-level-link {
+        position: relative;
+        min-width: 40px;
+    }
+
+    button.first-level-link > span.search-btn {
+        display: block;
+        position: absolute;
+        left: 50% !important;
+        transform: translateX(-50%);
+        top: 0;
+        padding-top: 12px;
+    }
+
+    .first-level-link > span.search-btn > span[class^="ca-gov-icon"] {
+        display: block;
+        font-size: 32px;
+    }
+}
