Fixed alert banner accessibility issue

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5 -  @version v5.0.17 -  5/1/2020 
+ * CA State Template v5 -  @version v5.0.17 -  6/4/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.4.1 - /source/scss/bootstrap/ 
@@ -16397,10 +16397,7 @@ body {
 }
 
 .global-header.compact .alert-banner {
-  opacity: 0;
-  position: absolute;
-  width: 0;
-  height: 0;
+  display: none;
 }
 
 /* -----------------------------------------
