--- a/source/scss/cagov/alert-banner.scss
+++ b/source/scss/cagov/alert-banner.scss
@@ -80,9 +80,6 @@
 
 .global-header.compact {
     .alert-banner {
-        opacity: 0;
-        position: absolute;
-        width: 0;
-        height: 0;
+        display:none;
     }
 	}
