Added 50 more new icons to the CaGov icon font library

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.17 -  8/13/2020 
+ * CA State Template v5.5 -  @version v5.5.17 -  8/17/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.5.0 - /source/scss/bootstrap/ 
@@ -9506,6 +9506,206 @@ ul.et-fb-font-icon-list li:after {
   font-family: 'CaGov', 'ETModules' !important;
   content: attr(data-icon);
   speak: none;
+}
+
+.ca-gov-icon-amusement:before {
+  content: "\e9ab";
+}
+
+.ca-gov-icon-baloons:before {
+  content: "\e9ac";
+}
+
+.ca-gov-icon-barge-ship:before {
+  content: "\e9ad";
+}
+
+.ca-gov-icon-bike:before {
+  content: "\e9ae";
+}
+
+.ca-gov-icon-boat:before {
+  content: "\e9af";
+}
+
+.ca-gov-icon-bridge:before {
+  content: "\e9b0";
+}
+
+.ca-gov-icon-bridge-alt:before {
+  content: "\e9b1";
+}
+
+.ca-gov-icon-bus:before {
+  content: "\e9b2";
+}
+
+.ca-gov-icon-bus-alt:before {
+  content: "\e9b3";
+}
+
+.ca-gov-icon-car:before {
+  content: "\e9b4";
+}
+
+.ca-gov-icon-car-alt:before {
+  content: "\e9b5";
+}
+
+.ca-gov-icon-casino:before {
+  content: "\e9b6";
+}
+
+.ca-gov-icon-cofee:before {
+  content: "\e9b7";
+}
+
+.ca-gov-icon-cruise-ship:before {
+  content: "\e9b8";
+}
+
+.ca-gov-icon-dices:before {
+  content: "\e9b9";
+}
+
+.ca-gov-icon-directions:before {
+  content: "\e9ba";
+}
+
+.ca-gov-icon-entertainment:before {
+  content: "\e9bb";
+}
+
+.ca-gov-icon-family:before {
+  content: "\e9bc";
+}
+
+.ca-gov-icon-family-alt:before {
+  content: "\e9bd";
+}
+
+.ca-gov-icon-fastfood:before {
+  content: "\e9be";
+}
+
+.ca-gov-icon-ferry:before {
+  content: "\e9bf";
+}
+
+.ca-gov-icon-fitness:before {
+  content: "\e9c0";
+}
+
+.ca-gov-icon-fitness-alt:before {
+  content: "\e9c1";
+}
+
+.ca-gov-icon-hair:before {
+  content: "\e9c2";
+}
+
+.ca-gov-icon-hair-salon:before {
+  content: "\e9c3";
+}
+
+.ca-gov-icon-highway:before {
+  content: "\e9c4";
+}
+
+.ca-gov-icon-museum:before {
+  content: "\e9c5";
+}
+
+.ca-gov-icon-museum-alt:before {
+  content: "\e9c6";
+}
+
+.ca-gov-icon-no-travel:before {
+  content: "\e9c7";
+}
+
+.ca-gov-icon-paddle-boat:before {
+  content: "\e9c8";
+}
+
+.ca-gov-icon-party:before {
+  content: "\e9c9";
+}
+
+.ca-gov-icon-places:before {
+  content: "\e9ca";
+}
+
+.ca-gov-icon-rail:before {
+  content: "\e9cb";
+}
+
+.ca-gov-icon-restaurant:before {
+  content: "\e9cc";
+}
+
+.ca-gov-icon-road:before {
+  content: "\e9cd";
+}
+
+.ca-gov-icon-rv:before {
+  content: "\e9ce";
+}
+
+.ca-gov-icon-sail-ship:before {
+  content: "\e9cf";
+}
+
+.ca-gov-icon-scooter:before {
+  content: "\e9d0";
+}
+
+.ca-gov-icon-ship:before {
+  content: "\e9d1";
+}
+
+.ca-gov-icon-speedtrain:before {
+  content: "\e9d2";
+}
+
+.ca-gov-icon-suv:before {
+  content: "\e9d3";
+}
+
+.ca-gov-icon-temple:before {
+  content: "\e9d4";
+}
+
+.ca-gov-icon-train:before {
+  content: "\e9d5";
+}
+
+.ca-gov-icon-trolleybus:before {
+  content: "\e9d6";
+}
+
+.ca-gov-icon-truck:before {
+  content: "\e9d7";
+}
+
+.ca-gov-icon-truck-alt:before {
+  content: "\e9d8";
+}
+
+.ca-gov-icon-van:before {
+  content: "\e9d9";
+}
+
+.ca-gov-icon-yacht:before {
+  content: "\e9da";
+}
+
+.ca-gov-icon-zoo:before {
+  content: "\e9db";
+}
+
+.ca-gov-icon-zoo-alt:before {
+  content: "\e9dc";
 }
 
 .ca-gov-icon-distance:before {
