added 27 new more icons to CaGov font library

--- a/source/scss/cagov/global-footer.scss
+++ b/source/scss/cagov/global-footer.scss
@@ -6,7 +6,7 @@
 
 .global-footer {
     @include link-variant($gray-lightest, $color-p1, none, underline);
-    padding-top: $line-height-computed 0;
+    padding-top: 0;
     
     ul {
         @include list-unstyled();   // Remove styling from list
