--- a/css/cagov.font-only.css
+++ b/css/cagov.font-only.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.17 -  8/17/2020 
+ * CA State Template v5.5 -  @version v5.5.18 -  10/23/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    ICON FONTS - /source/scss/cagov/icon-font.scss
@@ -12,8 +12,6 @@
   font-style: normal;
 }
 
-.et_font_icon li[class^="ca-gov-icon-"]:before,
-.et_font_icon li[class*=" ca-gov-icon-"]:before,
 [class^="ca-gov-icon-"],
 [class*=" ca-gov-icon-"] {
   font-family: 'CaGov' !important;
@@ -26,15 +24,120 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.et_font_icon li:before,
-.et_pb_inline_icon:before,
-.et_pb_custom_button_icon:after,
-body #page-container a.et_pb_custom_button_icon:before,
-.et-pb-icon,
-ul.et-fb-font-icon-list li:after {
-  font-family: 'CaGov', 'ETModules' !important;
-  content: attr(data-icon);
-  speak: none;
+.ca-gov-icon-instagram:before {
+  content: "\e9ef";
+}
+
+.ca-gov-icon-share-instagram:before {
+  content: "\e9f4";
+}
+
+.ca-gov-icon-air:before {
+  content: "\e9dd";
+}
+
+.ca-gov-icon-air-polution:before {
+  content: "\e9de";
+}
+
+.ca-gov-icon-air-quality:before {
+  content: "\e9df";
+}
+
+.ca-gov-icon-anchor:before {
+  content: "\e9e0";
+}
+
+.ca-gov-icon-bambinton:before {
+  content: "\e9e1";
+}
+
+.ca-gov-icon-baseballl:before {
+  content: "\e9e2";
+}
+
+.ca-gov-icon-basketball:before {
+  content: "\e9e3";
+}
+
+.ca-gov-icon-bath:before {
+  content: "\e9e4";
+}
+
+.ca-gov-icon-billiards:before {
+  content: "\e9e5";
+}
+
+.ca-gov-icon-bowling:before {
+  content: "\e9e6";
+}
+
+.ca-gov-icon-care-tweezers:before {
+  content: "\e9e7";
+}
+
+.ca-gov-icon-church:before {
+  content: "\e9e8";
+}
+
+.ca-gov-icon-down:before {
+  content: "\e9e9";
+}
+
+.ca-gov-icon-down-left:before {
+  content: "\e9ea";
+}
+
+.ca-gov-icon-down-right:before {
+  content: "\e9eb";
+}
+
+.ca-gov-icon-external-link:before {
+  content: "\e9ec";
+}
+
+.ca-gov-icon-football:before {
+  content: "\e9ed";
+}
+
+.ca-gov-icon-golf:before {
+  content: "\e9ee";
+}
+
+.ca-gov-icon-left:before {
+  content: "\e9f0";
+}
+
+.ca-gov-icon-nail-polish:before {
+  content: "\e9f1";
+}
+
+.ca-gov-icon-personal-care:before {
+  content: "\e9f2";
+}
+
+.ca-gov-icon-right:before {
+  content: "\e9f3";
+}
+
+.ca-gov-icon-soccer:before {
+  content: "\e9f5";
+}
+
+.ca-gov-icon-tennis:before {
+  content: "\e9f6";
+}
+
+.ca-gov-icon-up:before {
+  content: "\e9f7";
+}
+
+.ca-gov-icon-up-left:before {
+  content: "\e9f8";
+}
+
+.ca-gov-icon-up-right:before {
+  content: "\e9f9";
 }
 
 .ca-gov-icon-amusement:before {
@@ -969,10 +1072,6 @@ ul.et-fb-font-icon-list li:after {
   content: "\e677";
 }
 
-.ca-gov-icon-share-instagram:before {
-  content: "\e678";
-}
-
 .ca-gov-icon-share-pinterest:before {
   content: "\e679";
 }
@@ -1047,10 +1146,6 @@ ul.et-fb-font-icon-list li:after {
 
 .ca-gov-icon-vimeo:before {
   content: "\e61b";
-}
-
-.ca-gov-icon-instagram:before {
-  content: "\e61c";
 }
 
 .ca-gov-icon-flickr:before {
