added external and anchor link styles

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -23596,6 +23596,17 @@ a.label-dark:focus, a.label-dark.focus {
   line-height: 1.6em !important;
 }
 
+.bold {
+  font-weight: 700 !important;
+}
+
+.link-icon {
+  font-size: .7rem !important;
+  position: relative;
+  top: -3px;
+  margin-left: 3px;
+}
+
 /*------------------------------------
   Rounded borders
 ------------------------------------*/
