added bold style and css shortcuts page

--- a/source/scss/cagov/globals.scss
+++ b/source/scss/cagov/globals.scss
@@ -666,7 +666,7 @@
     line-height: 1.6em !important;
 }
 
-.bold {font-weight: 700 !important;}
+.bold, .text-bold {font-weight: 700 !important;}
 
 // for external and anchor links icons
   .link-icon {
