--- a/source/scss/cagov/global-header.scss
+++ b/source/scss/cagov/global-header.scss
@@ -89,11 +89,65 @@
                 max-width: 225px;
             }
         }
+
+        
         // Move logo above navigation
         a {
             display: inline-block;
             z-index: 26; // navigation is 25
             position: relative;
+            text-decoration: none;
+            color: black;
+            background-image: none;
+
+            .logo-assets {
+                display: flex;
+                align-items:center;
+                height: 80px;
+
+                .logo-img {
+                    max-width: 100%;
+                    width: 80px;
+                    height: auto;
+                    display: inline-block;
+                    transition: all .3s;
+                }
+            
+                .logo-text {
+                    padding-left: 5px;
+                    .logo-state {
+                        font-size: 1rem; 
+                        font-family: "Asap Condensed", sans-serif;
+                        margin: 0; 
+                        padding: 0;
+                        color: $gray-dark;
+                        height: 20px;
+                        line-height: 1.2em;
+                        transition: all .3s;
+                        display: block;
+                     @media (max-width: $screen-xs-max) { 
+                         margin-top: 5px;
+                        font-size: .9rem;
+                       }
+                    }
+                    .logo-dept {
+                        font-size: 1.54rem;
+                        font-family: "Asap Condensed", sans-serif;
+                        font-weight: 700;
+                        margin: 0; 
+                        padding: 0;
+                        color: $gray-dark;
+                        height: 24px;
+                        line-height: 1.2em;
+                       transition: all .3s;
+                       display: block;
+                       @media (max-width: $screen-xs-max) { 
+                        font-size: 1.1rem;
+                        min-width: 200px;
+                       }
+                    }
+                }
+            }
         }
 
         @media (max-width: $screen-xs-max) { // Beta 5.0 addition
@@ -107,6 +161,35 @@
         max-width:100%;
     }
 }
+
+    
+
+
+// FIXED HEADER LOGO
+.fixed.compact .branding .header-organization-banner {
+    .logo-assets {
+        height: 60px;
+    
+        .logo-img {
+            width: 70px;
+        }
+    
+        .logo-text {
+            .logo-state {
+                font-size: .8rem; 
+                line-height: 1em;
+                height: 16px;
+                min-width: 200px;
+            }
+            .logo-dept {
+                font-size: 1.2rem;
+                line-height: 1em;
+                min-width: 200px;
+            }
+        }
+    }
+}
+
 
 
 //
@@ -156,6 +239,8 @@
     & + .header-single-banner, & + .header-large-banner, & + .header-primary-banner {
         margin-top: 120px;
     }
+
+    
 }
 
 .carousel-banner,
@@ -164,4 +249,53 @@
 .carousel-banner .owl-item,
 .carousel-banner .slide {
     height: 100%;
+}
+
+
+.nav-full-width-icons {
+    a {
+
+        .logo-assets {
+            display: flex;
+            align-items:center;
+            height: 55px;
+
+            .logo-img {
+                max-width: 100%;
+                width: 80px;
+                height: auto;
+                display: inline-block;
+                transition: all .3s;
+            }
+        
+            .logo-text {
+                padding-left: 5px;
+                .logo-state {
+                    font-size: .9rem; 
+                    font-family: "Asap Condensed", sans-serif;
+                    margin: 0; 
+                    padding: 0;
+                    color: $white;
+                    height: 17px;
+                    line-height: 1em;
+                    transition: all .3s;
+                    display: block;
+                
+                }
+                .logo-dept {
+                    font-size: 1.4rem;
+                    font-family: "Asap Condensed", sans-serif;
+                    font-weight: 700;
+                    margin: 0; 
+                    padding: 0;
+                    color: $white;
+                    height: 24px;
+                    line-height: 1em;
+                   transition: all .3s;
+                   display: block;
+                   
+                }
+            }
+        }
+    }
 }
