changed mobile navigation breakpoint from 768px to 992px

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.18 -  10/23/2020 
+ * CA State Template v5.5 -  @version v5.5.18 -  10/24/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.5.0 - /source/scss/bootstrap/ 
@@ -12089,7 +12089,7 @@ a.list-group-item {
   box-shadow: 0px 0px 15px 0px rgba(189, 189, 189, 0.4);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .global-header .mobile-controls {
     display: none !important;
   }
@@ -12133,7 +12133,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .branding {
     height: 82px !important;
   }
@@ -12145,7 +12145,7 @@ a.list-group-item {
   transition: all 0.3s;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .branding .header-organization-banner {
     max-width: 400px;
   }
@@ -12231,7 +12231,7 @@ a.list-group-item {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .branding .header-organization-banner {
     position: absolute;
     margin-top: -5px;
@@ -12661,7 +12661,7 @@ a.list-group-item {
   transition: all 0.5s 0.1s;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .search-container, .featured-search.active {
     position: absolute;
     top: 87px;
@@ -12731,7 +12731,7 @@ a.list-group-item {
   line-height: 30px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container .submit-container button, .featured-search.active .submit-container button {
     font-size: 32px;
     font-size: 2rem;
@@ -12756,7 +12756,7 @@ a.list-group-item {
   color: #777777;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container .close-search, .featured-search.active .close-search {
     right: 0;
     display: none;
@@ -12770,10 +12770,10 @@ a.list-group-item {
 .search-container.active {
   max-height: 300px;
   padding: 20px 15%;
-  /* Active on mobile */
+  /* Active on mobile // 991px // */
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container.active {
     padding: 10px;
   }
@@ -12783,7 +12783,7 @@ a.list-group-item {
   display: block;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container.active .close-search {
     display: none;
   }
@@ -12798,7 +12798,7 @@ a.list-group-item {
 }
 
 /* Large Search Animation and Styling */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .featured-search {
     display: block;
     position: absolute;
@@ -12870,13 +12870,13 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) and (min-width: 768px) {
+@media (min-width: 992px) and (min-width: 992px) {
   .featured-search.active {
     position: absolute;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .featured-search.active .close-search {
     display: none;
   }
@@ -12893,7 +12893,7 @@ a.list-group-item {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container.featured-search {
     padding-right: 10px;
     padding-left: 10px;
@@ -12969,7 +12969,7 @@ a.list-group-item {
   line-height: 30px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .agency-form .submit-container button {
     font-size: 32px;
     font-size: 2rem;
@@ -13000,7 +13000,7 @@ a.list-group-item {
   /* Mobile Search button padding */
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container .textfield-container, .search-container.featured-search.active .textfield-container {
     margin-right: -48px;
     padding-right: 44px;
@@ -13045,7 +13045,7 @@ a.list-group-item {
   text-overflow: ellipsis;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container .search-locator, .search-container.featured-search.active .search-locator {
     width: 75px;
     margin-left: 5px;
@@ -13077,7 +13077,7 @@ a.list-group-item {
   background: rgba(0, 0, 0, 0.5);
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .fixed.compact .search-container {
     opacity: 0;
   }
@@ -13088,7 +13088,7 @@ a.list-group-item {
 }
 
 /*full width navigation search container*/
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .nav-full-width + .search-container, .nav-full-width + .featured-search.active {
     top: 35px;
   }
@@ -13098,7 +13098,7 @@ a.list-group-item {
   }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 992px) and (max-width: 1200px) {
   .nav-full-width + .search-container, .nav-full-width + .featured-search.active {
     top: 32px;
   }
@@ -13150,7 +13150,7 @@ button.gsc-search-button {
   color: whitesmoke;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .search-container #Search .close-search {
     display: block;
   }
@@ -13330,7 +13330,7 @@ table.gsc-search-box td {
 }
 
 /* Full Width navigation search */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .full-width-nav .featured-search {
     top: -65px;
     right: 15px;
@@ -13346,7 +13346,7 @@ table.gsc-search-box td {
   /* full width featured search hack for IE */
 }
 
-@media all and (min-width: 768px) and (-ms-high-contrast: none) {
+@media all and (min-width: 992px) and (-ms-high-contrast: none) {
   .full-width-nav .featured-search {
     width: 100%;
     max-width: 100%;
@@ -13367,11 +13367,11 @@ table.gsc-search-box td {
   }
 }
 
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 992px) and (max-width: 1200px) {
   /* full width featured search hack for IE */
 }
 
-@media all and (min-width: 768px) and (max-width: 992px) and (-ms-high-contrast: none) {
+@media all and (min-width: 992px) and (max-width: 1200px) and (-ms-high-contrast: none) {
   .full-width-nav .featured-search {
     width: 100%;
     max-width: 100%;
@@ -13393,7 +13393,7 @@ table.gsc-search-box td {
 }
 
 /* search box icons for mobile */
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .gsc-search-button .ca-gov-icon-search {
     font-size: 34px !important;
   }
@@ -13579,7 +13579,7 @@ table.gsc-search-box td {
   max-height: 1000px !important;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .nav-item .sub-nav.open {
     max-height: 1000px;
     -webkit-transition: max-height 0.5s ease-in-out;
@@ -13629,7 +13629,7 @@ table.gsc-search-box td {
   text-decoration: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .first-level-link > span[class^="ca-gov-icon"]:not(.carrot), .first-level-btn > span[class^="ca-gov-icon"]:not(.carrot) {
     /* Navigation icons */
     display: block;
@@ -13637,7 +13637,7 @@ table.gsc-search-box td {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .first-level-link, .first-level-btn {
     display: block;
     padding: 20px 0 20px 15px;
@@ -13656,7 +13656,7 @@ table.gsc-search-box td {
   }
 }
 
-@media (max-width: 992px) and (min-width: 768px) {
+@media (max-width: 1200px) and (min-width: 992px) {
   .first-level-link, .first-level-btn {
     padding: 5px 9px 12px 9px;
   }
@@ -13665,7 +13665,7 @@ table.gsc-search-box td {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .main-navigation {
     z-index: 25;
     min-height: 85px;
@@ -13779,7 +13779,7 @@ table.gsc-search-box td {
 }
 
 /* MOBILE NAVIGATION */
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   #navigation {
     clear: both;
     width: 100%;
@@ -13914,13 +13914,13 @@ table.gsc-search-box td {
   width: 100%;
 }
 
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .main-navigation {
     padding-left: 350px;
   }
 }
 
-@media (max-width: 992px) and (min-width: 768px) {
+@media (max-width: 1200px) and (min-width: 992px) {
   .main-navigation {
     padding-left: 250px;
   }
@@ -13930,7 +13930,7 @@ table.gsc-search-box td {
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1280px) {
   .main-navigation {
     padding-left: 350px;
   }
@@ -13944,13 +13944,13 @@ table.gsc-search-box td {
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .nav-item .toggle-sub-nav {
     display: none;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .fixed.top-level-nav .nav-item {
     min-height: 50px;
   }
@@ -13969,7 +13969,7 @@ table.gsc-search-box td {
 }
 
 /*full width navigation*/
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .nav-full-width .main-navigation {
     min-height: 30px;
     margin-top: 0;
@@ -14007,7 +14007,7 @@ table.gsc-search-box td {
 }
 
 /* FULL WIDTH MENU WITH ICONS */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .nav-full-width-icons .main-navigation {
     padding-left: 0px;
     margin-top: 0px;
@@ -14038,7 +14038,7 @@ table.gsc-search-box td {
 }
 
 /* FULL WIDTH MENU WITH REGULAR UTILITY BAR */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .full-width-nav .main-navigation {
     padding-left: 0px;
     margin-top: 0px;
@@ -14131,7 +14131,7 @@ table.gsc-search-box td {
 }
 
 /* Navigation button mobile */
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .top-level-nav {
     width: 100%;
   }
@@ -14153,7 +14153,7 @@ table.gsc-search-box td {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .nav-item .first-level-link.has-sub .carrot, .first-level-btn .carrot {
     font-size: .8rem;
     position: absolute;
@@ -14163,7 +14163,7 @@ table.gsc-search-box td {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .nav-item .first-level-link.has-sub .carrot {
     display: none;
   }
@@ -14173,16 +14173,10 @@ table.gsc-search-box td {
    MEGA MENU
    /source/scss/cagov/nav-megamenu.scss
 ----------------------------------------- */
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .main-navigation {
     margin-top: 0;
     padding: 0;
-  }
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
-  .megadropdown .top-level-nav {
-    font-size: 0.9em;
   }
 }
 
@@ -14190,7 +14184,7 @@ table.gsc-search-box td {
   position: static;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .megadropdown .top-level-nav .nav-item {
     position: relative;
   }
@@ -14208,13 +14202,13 @@ table.gsc-search-box td {
   right: initial;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .main-navigation.dropdown .sub-nav {
     max-width: 100%;
   }
 }
 
-@media (min-width: 767px) {
+@media (min-width: 991px) {
   /* Dynamic Element appended to each .sub-nav */
   .nav-arrow-container {
     display: block;
@@ -14270,7 +14264,7 @@ table.gsc-search-box td {
   padding: 0;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .half .second-level-nav, .two-thirds .second-level-nav {
     -moz-column-count: 2;
     -ms-column-count: 2;
@@ -14349,7 +14343,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   margin-right: 3px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   a.second-level-link {
     padding: 10px 15px 10px 40px !important;
   }
@@ -14364,7 +14358,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   font-size: 1rem;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .unit1 {
     height: 65px;
     overflow: hidden !important;
@@ -14392,7 +14386,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 /* Megamenu State Template v4 */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .main-navigation.megadropdown.original .second-level-nav {
     -moz-column-count: 3;
     -ms-column-count: 3;
@@ -14506,7 +14500,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   outline: #2ea3f2 solid 2px;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .main-navigation {
     overflow: hidden;
   }
@@ -14527,7 +14521,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .sub-nav {
     border-top: none;
   }
@@ -14546,7 +14540,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
 }
 
 /* Flex Sub Nav */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .second-level-nav.flex {
     display: flex;
     text-align: center;
@@ -14578,7 +14572,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
   }
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .second-level-nav.flex {
     display: block;
     text-align: left;
@@ -14898,7 +14892,7 @@ a.second-level-link [class^="ca-gov-icon-"] {
         transform: rotate(90deg) !important;
     }
 }*/
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   /*button carrot*/
   .first-level-btn[aria-expanded="false"] .rotate {
     display: block;
@@ -15354,7 +15348,7 @@ pre {
    ASK Group
    /source/scss/cagov/ask-group.scss
 ----------------------------------------- */
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .ask-group {
     position: relative;
     width: 60%;
@@ -15393,13 +15387,13 @@ pre {
   }
 }
 
-@media (min-width: 768px) and (max-width: 767px) {
+@media (min-width: 992px) and (max-width: 991px) {
   .ask-group {
     position: static;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .ask-group .panel {
     display: inline;
     background: none;
@@ -15446,8 +15440,8 @@ pre {
   }
 }
 
-/* Optimize ask group position for tablets */
-@media (min-width: 768px) and (max-width: 992px) {
+/* Optimize ask group position for tablets 992 and 1140 */
+@media (min-width: 992px) and (max-width: 1200px) {
   .ask-group {
     left: 10%;
     width: 90%;
@@ -15501,7 +15495,7 @@ pre {
   color: #fff;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
   .header-single-banner {
     display: none;
   }
