--- a/source/scss/cagov/nav-mobile-controls.scss
+++ b/source/scss/cagov/nav-mobile-controls.scss
@@ -198,7 +198,8 @@
 
 
 // HAS SUB CARROT
-@media (max-width: $screen-xs-max) {
+// 991px
+@media (max-width: $screen-sm-max) {
     /*button carrot*/
     .first-level-btn[aria-expanded="false"] .rotate {
         display: block;
