--- a/source/scss/cagov/navigation.scss
+++ b/source/scss/cagov/navigation.scss
@@ -68,8 +68,8 @@
         overflow: hidden;
         opacity: 1;
         max-height: 1000px !important;
-
-        @media (max-width: $screen-xs-max) {
+        // 991px
+        @media (max-width: $screen-sm-max) {
             max-height: 1000px;
             -webkit-transition: max-height 0.5s ease-in-out;
             -moz-transition: max-height 0.5s ease-in-out;
@@ -128,14 +128,15 @@
     }
 
     > span[class^="ca-gov-icon"]:not(.carrot) {
-        @media (min-width: $screen-sm-min) {
+         // 992px
+        @media (min-width: $screen-md-min) {
             /* Navigation icons */
             display: block;
             font-size: 32px;
         }
     }
-
-    @media (max-width: $screen-xs-max) {
+ // 991px
+    @media (max-width: $screen-sm-max) {
         &:first-child {
             margin-top: 2px
         }
@@ -154,8 +155,8 @@
 }
 
 
-
-    @media (max-width: $screen-md) and (min-width: $screen-sm-min) {
+ // 1200px and 991px
+    @media (max-width: $screen-lg) and (min-width: $screen-md-min) {
         .first-level-link, .first-level-btn {
             padding: 5px 9px 12px 9px;
 
@@ -167,7 +168,8 @@
     //
     // TOP LEVEL NAVIGATION FOR DESKTOP
     // --------------------------------------------------
-    @media (min-width: $screen-sm-min) {
+    // 992px
+    @media (min-width: $screen-md-min) {
         .main-navigation {
             z-index: 25;
             // handle the edge case when their is no nav links
@@ -323,7 +325,8 @@
 
 
 /* MOBILE NAVIGATION */
-@media (max-width: $screen-xs-max) {
+// 991px
+@media (max-width: $screen-sm-max) {
     #navigation {
         clear: both;
         width: 100%;
@@ -493,14 +496,15 @@
         width: 100%;
     }
 
-    @media (min-width: $screen-md) { // Beta 5.0 addition
+    // 1200px
+    @media (min-width: $screen-lg) { // Beta 5.0 addition
         .main-navigation {
             padding-left: 350px;
         }
     }
 
-
-    @media (max-width: $screen-md) and (min-width: $screen-sm-min) { // Beta 5.0 addition
+//1200px and 992px
+    @media (max-width: $screen-lg) and (min-width: $screen-md-min) { // Beta 5.0 addition
         .main-navigation {
             padding-left: 250px;
 
@@ -512,7 +516,8 @@
         }
     }
 
-    @media (min-width: $screen-lg) {
+    // 1280px
+    @media (min-width: $screen-xl) {
         .main-navigation {
             padding-left: 350px;
         }
@@ -526,8 +531,8 @@
         &.open .ca-gov-icon-menu-toggle-closed {
             display: none;
         }
-
-        @media (min-width: $screen-sm-min) {
+        //992px
+        @media (min-width: $screen-md-min) {
             display: none; // Hide menu dropdown button from desktop view
         }
     }
@@ -535,7 +540,8 @@
     //
     // Minor divsions or sub sections
     // --------------------------------------------------
-    @media (min-width: $screen-sm-min) {
+    // 992px
+    @media (min-width: $screen-md-min) {
         
 
         .fixed.top-level-nav .nav-item { // beta 5.0 addition
@@ -552,7 +558,8 @@
 
 
     /*full width navigation*/
-    @media (min-width: $screen-sm-min) {
+    // 992px
+    @media (min-width: $screen-md-min) {
         .nav-full-width {
             .main-navigation {
                 min-height: 30px;
@@ -609,7 +616,8 @@
 
 
     /* FULL WIDTH MENU WITH ICONS */
-    @media (min-width: $screen-sm-min) {
+    //992px
+    @media (min-width: $screen-md-min) {
         .nav-full-width-icons .main-navigation {
             padding-left: 0px;
             margin-top: 0px;
@@ -652,7 +660,8 @@
 
 
     /* FULL WIDTH MENU WITH REGULAR UTILITY BAR */
-    @media (min-width: $screen-sm-min) {
+    // 992px
+    @media (min-width: $screen-md-min) {
         .full-width-nav .main-navigation {
             padding-left: 0px;
             margin-top: 0px;
@@ -772,14 +781,11 @@
         pointer-events: none;
     }
 
-    @media (min-width: $screen-sm-min) {
-
-    }
-
 
 
 /* Navigation button mobile */
-@media (max-width: $screen-xs-max) {
+// 991px
+@media (max-width: $screen-sm-max) {
     .top-level-nav {
         width: 100%;
     }
@@ -807,7 +813,8 @@
 }
 
 // Adding carrot if nav item has sub nav
-@media (min-width: $screen-sm-min) {
+// 992px
+@media (min-width: $screen-md-min) {
     .nav-item .first-level-link.has-sub, .first-level-btn {
 
         .carrot {
@@ -820,7 +827,8 @@
     }
 }
 
-@media (max-width: $screen-xs-max) {
+// 991px
+@media (max-width: $screen-sm-max) {
     .nav-item .first-level-link.has-sub .carrot {
         display: none;
     }
