fixed sticky footer when used with two-column layout. issue #122

--- a/css/cagov.core.css
+++ b/css/cagov.core.css
@@ -1,5 +1,5 @@
 /**
- * CA State Template v5.5 -  @version v5.5.18 -  10/24/2020 
+ * CA State Template v5.5 -  @version v5.5.18 -  10/26/2020 
   STYLES COMPILED FROM SOURCE (SCSS) DO NOT MODIFY */
 /* -----------------------------------------
    BOOTSTRAP v4.5.0 - /source/scss/bootstrap/ 
@@ -11685,6 +11685,10 @@ a.list-group-item {
 }
 
 /* Two column layout option */
+.two-column .main-content {
+  min-height: unset;
+}
+
 @media (min-width: 992px) {
   .two-column .main-content .main-primary {
     position: relative;
