--- a/source/scss/cagov/layout.scss
+++ b/source/scss/cagov/layout.scss
@@ -28,6 +28,8 @@
 /* Two column layout option */
 .two-column {
     .main-content {
+        min-height:unset;
+
         > .section:extend(.container) {
             
         }
